# ohte-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.db
documents/: architecture.md  changelog.md  instructions.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database_connection.py  initialize_database.py  transaction.py  user.py
src/entities/: user.py
src/repositories/: transaction_repository.py  user_repository.py
src/services/: budget_service.py
src/tests/: budget_service_test.py  transaction_repository_test.py  user_repository_test.py
src/ui/: budget_view.py  login_view.py  register_view.py  ui.py
