[tool.poetry]
name = "ohte-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["niilolehtonen <niilo.i.lehtonen@gmail.com>"]
readme = "README.md"
packages = [{include = "ohte_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
