[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["niilolehtonen <niilo.i.lehtonen@gmail.com>"]
readme = "README.md"
packages = [{include = "ohte_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^7.2.2"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
